--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <h2>Contato</h2>
             <div id="contato">  
                 <input type="text" placeholder="Nome">  
-                <input type="email" placeholder="Email">
+                <input type="email" placeholder="Email id=" email">
                 <input type="text" placeholder="Assunto">
                 <textarea type="text" id="msg" placeholder="Mensagem"></textarea>
                 <input type="submit" id="btn" value="Enviar">
