--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
         <section class="contato">
             <h2>Contato</h2>
             <div id="contato">  
-                <input type="text" placeholder="Nome">  
-                <input type="email" placeholder="Email id=" email">
-                <input type="text" placeholder="Assunto">
-                <textarea type="text" id="msg" placeholder="Mensagem"></textarea>
-                <input type="submit" id="btn" value="Enviar">
+                <input type="text" placeholder=" Nome"> 
+                <input type="email" placeholder=" Email" id="email">
+                <input type="text" placeholder=" Assunto">
+                <textarea type="text" id="msg" placeholder=" Mensagem"></textarea>
+                <input type="button" id="btn" value="Enviar">
             </div> 
         </section>
                 
