--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
         <footer class="footer">
             <ul id="icons">
-                <li><a href="https://www.facebook.com/Sagas-Dragon-Ball-Z-520463705117184/?modal=admin_todo_tour"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="https://www.instagram.com/sagas_dragon_ball_z/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCOO7vWOBOEq5OY-7s9xdyHQ?view_as=subscriber"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/Sagas-Dragon-Ball-Z-520463705117184/?modal=admin_todo_tour" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.instagram.com/sagas_dragon_ball_z/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCOO7vWOBOEq5OY-7s9xdyHQ?view_as=subscriber"target="_blank" ><i class="fab fa-youtube"></i></a></li>
             </ul>
             <p>&copy; Sagas Dragon Ball Z</p><p>Desenvolvido por Igor Rangel</p>
         </footer>
