--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 
             <div class="videos majin_boo">
                 <h2>saga Majin Boo</h2>
-                <iframe 
-                    src="https://www.youtube.com/embed/s9xL78jDWRY" 
+                <iframe
+                    src="https://www.youtube.com/embed/RRKdghto0do" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
