--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="videos majin_boo">
                 <h2>saga Majin Boo</h2>
                 <iframe
-                    src="https://www.youtube.com/embed/RRKdghto0do" 
+                    src= "https://www.youtube.com/embed/74pE3QsFR-A"
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
