--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="videos freeza">
                 <h2>saga Freeza</h2>
                 <iframe 
-                    src="https://youtu.be/BD_QxJ4wkl0" 
+                    src="https://youtu.be/n9SB0F1Y9Eo" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
