--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
             <div class="videos freeza">
                 <h2>saga Freeza</h2>
                 <iframe 
-                    src="https://youtu.be/n9SB0F1Y9Eo" 
+                    src="https://www.youtube.com/embed/4tkI9jyh_1g" 
+                    title="YouTube video player" 
                     frameborder="0" 
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
                 </iframe>
             </div>
